--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ span{
 .intro-text h3 {
     color: var(--primary-color); /*deep purple:  #4A0E4E*/
     font-weight: 400;
-    font-size: 10px;
+    font-size: 22px;
     line-height: 2.0;
 }
 
@@ -1177,24 +1177,6 @@ span{
         padding: 8% 0;
     }
 
-    .work-heading h1 {
-        font-size: 2.8rem;
-    }
-
-    .work-container {
-        gap: 1.25rem;
-        max-width: 45rem;
-    }
-
-    .work-icon {
-        width: 3.2rem;
-        height: 3.2rem;
-    }
-
-    .work-text h2 {
-        font-size: 1.4rem;
-    }
-
     .footer {
         width: 100vw;
         margin-left: calc(50% - 50vw);
@@ -1294,20 +1276,6 @@ span{
         width: 100%;
     }
 
-    .work-container {
-        grid-template-columns: 1fr;
-        gap: 1rem;
-        max-width: 25rem;
-        padding: 0;
-    }
-
-    .work-heading h1 {
-        font-size: 2.5rem;
-    }
-
-    .work-text h2 {
-        font-size: 1.3rem;
-    }
 
     .footer {
         width: 100vw;
@@ -1384,6 +1352,10 @@ span{
         font-size: 35px;
     }
 
+    .intro-text h3 {
+        font-size: 18px;
+    }
+
     .buttons {
         flex-direction: column;
         gap: 10px;
@@ -1394,11 +1366,6 @@ span{
         margin: 0 auto;
     }
 
-    .work-container {
-        grid-template-columns: 1fr;
-        max-width: 350px;
-        margin: 0 auto;
-    }
     /* 1. Reset Case Study Containers */
     .case-hero,
     .case-section {
@@ -1499,9 +1466,10 @@ span{
         font-size: 28px;
     }
 
-    .work-heading h1 {
-        font-size: 2rem;
+    .intro-text h3 {
+        font-size: 16px;
     }
+
 
     .footer {
         width: 100vw;
